renamed app element; initiated Firebase

--- a/src/pullutiona-app/pullutiona-app.html
+++ b/src/pullutiona-app/pullutiona-app.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 
-<dom-module id="pulllutiona-app">
+<dom-module id="pullutiona-app">
   <template>
     <style>
       :host {
@@ -15,18 +15,18 @@
      * @customElement
      * @polymer
      */
-    class PulllutionaApp extends Polymer.Element {
-      static get is() { return 'pulllutiona-app'; }
+    class PullutionaApp extends Polymer.Element {
+      static get is() { return 'pullutiona-app'; }
       static get properties() {
         return {
           prop1: {
             type: String,
-            value: 'pulllutiona-app'
+            value: 'pullutiona-app'
           }
         };
       }
     }
 
-    window.customElements.define(PulllutionaApp.is, PulllutionaApp);
+    window.customElements.define(PullutionaApp.is, PullutionaApp);
   </script>
 </dom-module>
