--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>pulllutiona</title>
+    <title>pullutiona</title>
     <meta name="description" content="A pollution Tracker w/ Alarm">
 
     <!-- See https://goo.gl/OOhYW5 -->
@@ -12,9 +12,9 @@
 
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <link rel="import" href="/src/pulllutiona-app/pulllutiona-app.html">
+    <link rel="import" href="/src/pullutiona-app/pullutiona-app.html">
   </head>
   <body>
-    <pulllutiona-app></pulllutiona-app>
+    <pullutiona-app></pullutiona-app>
   </body>
 </html>
