First Google Maps rendering

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
 
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
+
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
     <link rel="import" href="/src/pullutiona-app/pullutiona-app.html">
