added onclick events and info windows for each marker.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>pullutiona</title>
+    <title>PullutionA</title>
     <meta name="description" content="A pollution Tracker w/ Alarm">
 
     <!-- See https://goo.gl/OOhYW5 -->
