fixed default map center and zoom so the app also show the devices on mobile phones

--- a/src/pullutiona-app/pullutiona-app.html
+++ b/src/pullutiona-app/pullutiona-app.html
@@ -16,10 +16,10 @@
     </style>
 
     <google-map id="gmap"
-                latitude="2.9163353"
-                longitude="101.6518609"
+                latitude="2.9155567"
+                longitude="101.65182"
                 api-key="AIzaSyC01I3twYn5XeuXE8Z9GqPHzB-rJIUIEDU"
-                zoom="15"
+                zoom="14"
                 fitToMarkers
                 markers="[[markers]]"
                 map="{{map}}"></google-map>
